--- a/styles.css
+++ b/styles.css
@@ -148,9 +148,16 @@ button {
 }
 
 #histories {
-  display: flex;
+  /* display: flex;
+
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-around; */
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 12px;
+  grid-column-gap: 12px;
+
 }
 
 .card {
@@ -158,6 +165,7 @@ button {
   height: 100%;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -187,6 +195,13 @@ button {
   .box-container {
     padding: 0 20px;
     width: 100%;
+  }
+
+  #histories {
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .card {
