--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ button {
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 12px;
   grid-column-gap: 12px;
+  text-align: center;
 
 }
 
